# cpp-project-template

./: .clang-format  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
geometry/: CMakeLists.txt
geometry-test/: CMakeLists.txt
geometry-test/src/: shap_test.cpp
geometry/include/geometry/: shap.h
geometry/src/: shap.cpp
